# speak-lab-ai

./: .env  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/docs/: ASSESSMENT.md  ielts-speaking-coach-design.md  part1-deterministic-flow.md
backend/examples/: demo.py  demo_gop.py  demo_part1_flow.py  live_demo.py  server.py
backend/prompts/: assessor-rubric-judges.md  examiner-pal-system-prompt.md
backend/scripts/: setup_tavus.py
backend/src/assessment/: __init__.py  aggregate.py  coaching.py  config.py  examiner.py  pal.py  part1_flow.py  quickscore.py  schema.py  scoring.py  session.py  stt.py  tavus_tools.py  transcript.py  webhook.py
backend/src/assessment/features/: __init__.py  fluency.py  gop.py  grammar.py  lexical.py  pronunciation.py
backend/src/assessment/parts/: __init__.py  base.py  part1.py  part2.py  part3.py
backend/tests/: test_aggregate.py  test_coaching.py  test_examiner.py  test_fluency.py  test_gop.py  test_lexical.py  test_part1_flow.py  test_parts.py  test_quickscore.py  test_score_session.py  test_tavus_tools.py  test_transcript.py  test_webhook.py
src/: routeTree.gen.ts  styles.css
src/components/: AuthFormField.tsx  AuthShell.tsx  BottomNav.tsx  ConversationShell.tsx  LiveAssessmentSession.tsx  LiveSessionMockup.tsx  ScoreProgressBar.tsx  SkipLink.tsx  TavusEmbedPanel.tsx  TavusEmbedSession.tsx
src/lib/: assessment-api.ts  assessment-storage.ts  auth-errors.ts  i18n.ts  tavus.ts
supabase/: config.toml
(+26 files in other folders)
